--- a/restaurants/la_note_enchantee.html
+++ b/restaurants/la_note_enchantee.html
@@ -45,6 +45,9 @@
                         <div class="card-price">
                             <p class="card-price">25<span class="euro">€</span></p>
                         </div>
+                        <div class="menu-check">
+                            <span><i class="fa-regular fa-circle-check"></i></span>
+                        </div>
                     </div>
                     <div class="card">
                         <div class="card-txt">
@@ -53,6 +56,9 @@
                         </div>
                         <div class="card-price">
                             <p class="card-price">35<span class="euro">€</span></p>
+                        </div>
+                        <div class="menu-check">
+                            <span><i class="fa-regular fa-circle-check"></i></span>
                         </div>
                     </div>
                     <div class="card">
@@ -63,6 +69,9 @@
                         <div class="card-price">
                             <p class="card-price">20<span class="euro">€</span></p>
                         </div>
+                        <div class="menu-check">
+                            <span><i class="fa-regular fa-circle-check"></i></span>
+                        </div>
                     </div>
                      <div class="card">
                         <div class="card-txt">
@@ -71,6 +80,9 @@
                         </div>
                         <div class="card-price">
                             <p class="card-price">35<span class="euro">€</span></p>
+                        </div>
+                        <div class="menu-check">
+                            <span><i class="fa-regular fa-circle-check"></i></span>
                         </div>
                     </div>
                 </section>
@@ -84,6 +96,9 @@
                         <div class="card-price">
                             <p class="card-price">40<span class="euro">€</span></p>
                         </div>
+                        <div class="menu-check">
+                            <span><i class="fa-regular fa-circle-check"></i></span>
+                        </div>
                     </div>
                     <div class="card">
                         <div class="card-txt">
@@ -93,6 +108,9 @@
                         <div class="card-price">
                             <p class="card-price">35<span class="euro">€</span></p>
                         </div>
+                        <div class="menu-check">
+                            <span><i class="fa-regular fa-circle-check"></i></span>
+                        </div>
                     </div>
                     <div class="card">
                         <div class="card-txt">
@@ -101,6 +119,9 @@
                         </div>
                         <div class="card-price">
                             <p class="card-price">44<span class="euro">€</span></p>
+                        </div>
+                        <div class="menu-check">
+                            <span><i class="fa-regular fa-circle-check"></i></span>
                         </div>
                     </div>
                 </section>
@@ -114,6 +135,9 @@
                         <div class="card-price">
                             <p class="card-price">18<span class="euro">€</span></p>
                         </div>
+                        <div class="menu-check">
+                            <span><i class="fa-regular fa-circle-check"></i></span>
+                        </div>
                     </div>
                     <div class="card">
                         <div class="card-txt">
@@ -123,6 +147,9 @@
                         <div class="card-price">
                             <p class="card-price">22<span class="euro">€</span></p>
                         </div>
+                        <div class="menu-check">
+                            <span><i class="fa-regular fa-circle-check"></i></span>
+                        </div>
                     </div>
                     <div class="card">
                         <div class="card-txt">
@@ -131,6 +158,9 @@
                         </div>
                         <div class="card-price">
                             <p class="card-price">23<span class="euro">€</span></p>
+                        </div>
+                        <div class="menu-check">
+                            <span><i class="fa-regular fa-circle-check"></i></span>
                         </div>
                     </div>
                 </section>
