--- a/restaurants/la_palette_du_gout.html
+++ b/restaurants/la_palette_du_gout.html
@@ -30,10 +30,10 @@
                 <div class="restaurant-title">
                     <h1>La palette du goût</h1>
                     <input type="checkbox" id="like1" class="btn__check" title="like1">
-                                            <label for="like1" class="btn">
-                                                <i class="fa-regular fa-heart"></i>
-                                                <i class="fa-solid fa-heart btn__bg"></i>
-                                            </label>
+                        <label for="like1" class="btn">
+                            <i class="fa-regular fa-heart"></i>
+                            <i class="fa-solid fa-heart btn__bg"></i>
+                        </label>
                 </div>
                 <section class="carte-details">
                     <h2 class="section-title">ENTREES</h2>
@@ -57,6 +57,9 @@
                         <div class="card-price">
                             <p class="card-price">35<span class="euro">€</span></p>
                         </div>
+                        <div class="menu-check">
+                            <span><i class="fa-regular fa-circle-check"></i></span>
+                        </div>
                     </div>
                     <div class="card">
                         <div class="card-txt">
@@ -65,6 +68,9 @@
                         </div>
                         <div class="card-price">
                             <p class="card-price">20<span class="euro">€</span></p>
+                        </div>
+                        <div class="menu-check">
+                            <span><i class="fa-regular fa-circle-check"></i></span>
                         </div>
                     </div>
                 </section>
@@ -78,6 +84,9 @@
                         <div class="card-price">
                             <p class="card-price">40<span class="euro">€</span></p>
                         </div>
+                        <div class="menu-check">
+                            <span><i class="fa-regular fa-circle-check"></i></span>
+                        </div>
                     </div>
                     <div class="card">
                         <div class="card-txt">
@@ -87,6 +96,9 @@
                         <div class="card-price">
                             <p class="card-price">35<span class="euro">€</span></p>
                         </div>
+                        <div class="menu-check">
+                            <span><i class="fa-regular fa-circle-check"></i></span>
+                        </div>
                     </div>
                     <div class="card">
                         <div class="card-txt">
@@ -95,6 +107,9 @@
                         </div>
                         <div class="card-price">
                             <p class="card-price">44<span class="euro">€</span></p>
+                        </div>
+                        <div class="menu-check">
+                            <span><i class="fa-regular fa-circle-check"></i></span>
                         </div>
                     </div>
                 </section>
@@ -108,6 +123,9 @@
                         <div class="card-price">
                             <p class="card-price">18<span class="euro">€</span></p>
                         </div>
+                        <div class="menu-check">
+                            <span><i class="fa-regular fa-circle-check"></i></span>
+                        </div>
                     </div>
                     <div class="card">
                         <div class="card-txt">
@@ -117,6 +135,9 @@
                         <div class="card-price">
                             <p class="card-price">22<span class="euro">€</span></p>
                         </div>
+                        <div class="menu-check">
+                            <span><i class="fa-regular fa-circle-check"></i></span>
+                        </div>
                     </div>
                     <div class="card">
                         <div class="card-txt">
@@ -125,6 +146,9 @@
                         </div>
                         <div class="card-price">
                             <p class="card-price">23<span class="euro">€</span></p>
+                        </div>
+                        <div class="menu-check">
+                            <span><i class="fa-regular fa-circle-check"></i></span>
                         </div>
                     </div>
                 </section>
