--- a/restaurants/le_delice_des_sens.html
+++ b/restaurants/le_delice_des_sens.html
@@ -45,6 +45,9 @@
                         <div class="card-price">
                             <p class="card-price">25<span class="euro">€</span></p>
                         </div>
+                        <div class="menu-check">
+                            <span><i class="fa-regular fa-circle-check"></i></span>
+                        </div>
                     </div>
                     <div class="card">
                         <div class="card-txt">
@@ -54,6 +57,9 @@
                         <div class="card-price">
                             <p class="card-price">35<span class="euro">€</span></p>
                         </div>
+                        <div class="menu-check">
+                            <span><i class="fa-regular fa-circle-check"></i></span>
+                        </div>
                     </div>
                     <div class="card">
                         <div class="card-txt">
@@ -62,6 +68,9 @@
                         </div>
                         <div class="card-price">
                             <p class="card-price">20<span class="euro">€</span></p>
+                        </div>
+                        <div class="menu-check">
+                            <span><i class="fa-regular fa-circle-check"></i></span>
                         </div>
                     </div>
                 </section>
@@ -75,6 +84,9 @@
                         <div class="card-price">
                             <p class="card-price">40<span class="euro">€</span></p>
                         </div>
+                        <div class="menu-check">
+                            <span><i class="fa-regular fa-circle-check"></i></span>
+                        </div>
                     </div>
                     <div class="card">
                         <div class="card-txt">
@@ -84,6 +96,9 @@
                         <div class="card-price">
                             <p class="card-price">35<span class="euro">€</span></p>
                         </div>
+                        <div class="menu-check">
+                            <span><i class="fa-regular fa-circle-check"></i></span>
+                        </div>
                     </div>
                     <div class="card">
                         <div class="card-txt">
@@ -92,6 +107,9 @@
                         </div>
                         <div class="card-price">
                             <p class="card-price">44<span class="euro">€</span></p>
+                        </div>
+                        <div class="menu-check">
+                            <span><i class="fa-regular fa-circle-check"></i></span>
                         </div>
                     </div>
                 </section>
@@ -105,6 +123,9 @@
                         <div class="card-price">
                             <p class="card-price">18<span class="euro">€</span></p>
                         </div>
+                        <div class="menu-check">
+                            <span><i class="fa-regular fa-circle-check"></i></span>
+                        </div>
                     </div>
                     <div class="card">
                         <div class="card-txt">
@@ -114,6 +135,9 @@
                         <div class="card-price">
                             <p class="card-price">22<span class="euro">€</span></p>
                         </div>
+                        <div class="menu-check">
+                            <span><i class="fa-regular fa-circle-check"></i></span>
+                        </div>
                     </div>
                     <div class="card">
                         <div class="card-txt">
@@ -122,6 +146,9 @@
                         </div>
                         <div class="card-price">
                             <p class="card-price">23<span class="euro">€</span></p>
+                        </div>
+                        <div class="menu-check">
+                            <span><i class="fa-regular fa-circle-check"></i></span>
                         </div>
                     </div>
                 </section>
