correction html et scss pour w3c input qui était dans <a>

--- a/index.html
+++ b/index.html
@@ -73,91 +73,108 @@
                     </div>
                 </div>
             </section>    
-            <section class="restaurants">
+             <section class="restaurants">
                 <h2 class="section-title">Restaurants</h2>
                 <div class="restaurants-cards">
-                    <a href="restaurants/la_palette_du_gout.html">
-                        <article class="card">
+
+                    <!-- Carte 1 -->
+                    <article class="card">
+                        <a href="restaurants/la_palette_du_gout.html" class="card-link">
                             <div class="image-container">
-                                <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image du restaurant">
+                                <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant La palette du goût à Ménilmontant">
                                 <div class="badge">Nouveau</div>
-                            </div>                             
-                            <div class="card-content">                      
+                            </div>
+                            <div class="card-content">
                                 <div class="card-txt">
                                     <div class="card-header">
                                         <h3 class="card-title">La palette du goût</h3>
-                                        <input type="checkbox" id="like1" class="btn__check" title="like1">
-                                            <label for="like1" class="btn">
-                                                <i class="fa-regular fa-heart"></i>
-                                                <i class="fa-solid fa-heart btn__bg"></i>
-                                            </label>                                      
+                                        <p class="card-subtitle">Ménilmontant</p>
                                     </div>
-                                    <p class="card-subtitle">Ménilmontant</p>
-                                </div>                                
+                                </div>
                             </div>
-                        </article>
-                    </a>
-                     <a href="restaurants/la_note_enchantee.html">
-                        <article class="card">
-                            <div class="image-container">
-                                <img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image du restaurant">
-                                <div class="badge">Nouveau</div>
-                            </div>  
-                            <div class="card-content">                      
-                                <div class="card-txt">
-                                    <div class="card-header">
-                                        <h3 class="card-title">La note enchantée</h3>
-                                        <input type="checkbox" id="like2" class="btn__check" title="like2">
-                                            <label for="like2" class="btn">
-                                                <i class="fa-regular fa-heart"></i>
-                                                <i class="fa-solid fa-heart btn__bg"></i>
-                                            </label>                                    
-                                    </div>
-                                    <p>Charonne</p>
-                                </div>                                
+                        </a>
+                        <!-- Bouton like : en dehors du lien mais visuellement dans la carte -->
+                        <div class="card-like">
+                        <input type="checkbox" id="like1" class="btn__check" title="Ajouter La palette du goût aux favoris">
+                        <label for="like1" class="btn" aria-label="J’aime La palette du goût">
+                            <i class="fa-regular fa-heart" aria-hidden="true"></i>
+                            <i class="fa-solid fa-heart btn__bg" aria-hidden="true"></i>
+                        </label>
+                        </div>
+                    </article>
+
+                    <!-- Carte 2 -->
+                    <article class="card">
+                        <a href="restaurants/la_note_enchantee.html" class="card-link">
+                        <div class="image-container">
+                            <img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant La note enchantée à Charonne">
+                            <div class="badge">Nouveau</div>
+                        </div>
+                        <div class="card-content">
+                            <div class="card-txt">
+                            <div class="card-header">
+                                <h3 class="card-title">La note enchantée</h3>
+                                <p class="card-subtitle">Charonne</p>
                             </div>
-                        </article>
-                    </a>
-                    <a href="restaurants/a_la_française.html">
-                        <article class="card">
-                            <div class="image-container">
-                                <img src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image du restaurant">
-                            </div>    
-                            <div class="card-content">                      
-                                <div class="card-txt">
-                                    <div class="card-header">
-                                        <h3 class="card-title">A la française</h3>
-                                        <input type="checkbox" id="like3" class="btn__check" title="like3">
-                                            <label for="like3" class="btn">
-                                                <i class="fa-regular fa-heart"></i>
-                                                <i class="fa-solid fa-heart btn__bg"></i>
-                                            </label>                                
-                                    </div>
-                                    <p>Cité Rouge</p>
-                                </div>                                
                             </div>
-                        </article>
-                    </a>
-                    <a href="restaurants/le_delice_des_sens.html">
-                        <article class="card">
-                            <div class="image-container">
-                                <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image du restaurant"> 
+                        </div>
+                        </a>
+                        <div class="card-like">
+                        <input type="checkbox" id="like2" class="btn__check" title="Ajouter La note enchantée aux favoris">
+                        <label for="like2" class="btn" aria-label="J’aime La note enchantée">
+                            <i class="fa-regular fa-heart" aria-hidden="true"></i>
+                            <i class="fa-solid fa-heart btn__bg" aria-hidden="true"></i>
+                        </label>
+                        </div>
+                    </article>
+
+                    <!-- Carte 3 -->
+                    <article class="card">
+                        <a href="restaurants/a_la_française.html" class="card-link">
+                        <div class="image-container">
+                            <img src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant À la française à Cité Rouge">
+                        </div>
+                        <div class="card-content">
+                            <div class="card-txt">
+                            <div class="card-header">
+                                <h3 class="card-title">À la française</h3>
+                                <p class="card-subtitle">Cité Rouge</p>
                             </div>
-                            <div class="card-content">                      
-                                <div class="card-txt">
-                                    <div class="card-header">
-                                        <h3 class="card-title">Le délice des sens</h3>
-                                        <input type="checkbox" id="like4" class="btn__check" title="like4">
-                                            <label for="like4" class="btn">
-                                                <i class="fa-regular fa-heart"></i>
-                                                <i class="fa-solid fa-heart btn__bg"></i>
-                                            </label>                                    
-                                    </div>
-                                    <p>Folie-Méricourt</p>
-                                </div>                                
                             </div>
-                        </article>
-                    </a>
+                        </div>
+                        </a>
+                        <div class="card-like">
+                        <input type="checkbox" id="like3" class="btn__check" title="Ajouter À la française aux favoris">
+                        <label for="like3" class="btn" aria-label="J’aime À la française">
+                            <i class="fa-regular fa-heart" aria-hidden="true"></i>
+                            <i class="fa-solid fa-heart btn__bg" aria-hidden="true"></i>
+                        </label>
+                        </div>
+                    </article>
+
+                    <!-- Carte 4 -->
+                    <article class="card">
+                        <a href="restaurants/le_delice_des_sens.html" class="card-link">
+                        <div class="image-container">
+                            <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant Le délice des sens à Folie-Méricourt">
+                        </div>
+                        <div class="card-content">
+                            <div class="card-txt">
+                            <div class="card-header">
+                                <h3 class="card-title">Le délice des sens</h3>
+                                <p class="card-subtitle">Folie-Méricourt</p>
+                            </div>
+                            </div>
+                        </div>
+                        </a>
+                        <div class="card-like">
+                        <input type="checkbox" id="like4" class="btn__check" title="Ajouter Le délice des sens aux favoris">
+                        <label for="like4" class="btn" aria-label="J’aime Le délice des sens">
+                            <i class="fa-regular fa-heart" aria-hidden="true"></i>
+                            <i class="fa-solid fa-heart btn__bg" aria-hidden="true"></i>
+                        </label>
+                        </div>
+                    </article>
                 </div>
             </section>
         </main>
